--- a/index.html
+++ b/index.html
@@ -11,27 +11,28 @@
 <body>
 <header class="header">
     <div class="container">
-        <div class="header__hamburger">
-            <input class="menu-btn" type="checkbox" id="menu-btn" />
-            <label class="menu-icon" for="menu-btn">
-                <span class="navicon"></span>
-            </label>
-        </div>
-        <div class="header__container">
-            <ul class="header__menu ">
-                <li><a href="#">Welcome</a></li>
-                <li><a href="#">Dropdown</a></li>
-                <li><a href="#">Left Sidebar</a></li>
-                <li><a href="#">Right Sidebar</a></li>
-                <li><a href="#">No Sidebar</a></li>
-            </ul>
-            <div class="header__heading">
-                <h1 class="header__title">Verti</h1>
+        <div class="header__hamburger-container">
+            <div class="header__hamburger">
+                <input class="menu-btn" type="checkbox" id="menu-btn" />
+                <label class="menu-icon" for="menu-btn">
+                    <span class="navicon"></span>
+                </label>
+            </div>
+            <div class="header__menu-container">
+                <ul class="header__menu ">
+                    <li><a href="#">Welcome</a></li>
+                    <li><a href="#">Dropdown</a></li>
+                    <li><a href="#">Left Sidebar</a></li>
+                    <li><a href="#">Right Sidebar</a></li>
+                    <li><a href="#">No Sidebar</a></li>
+                </ul>
+                <div class="header__heading">
+                    <h1 class="header__title">Verti</h1>
+                </div>
             </div>
         </div>
     </div>
 </header>
-
 <section class="welcome">
     <div class="welcome__text">
         <h2 class="welcome__subheading">Hi. This is Verti. </h2>
